--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,8 @@
-# CLIP-JEPA Training Configuration
 debug: false
-batch_size: 56
+batch_size: 24
 epochs: 2
 learning_rate: 1.0e-3
-log_every_n_steps: 50
 
 lora_config:
-  use_qlora: false
-
-data_config:
-  dataset: "jxie/coco_captions"
+  r: 8
+  lora_alpha: 16
