--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,9 @@ pyyaml
 pytest
 qwen_vl_utils
 ruff
-timm
 torch==2.8.0
 torchvision
 tqdm
-transformers
+transformers==4.57.1
 trl==0.25.1
 wandb
